--- a/galeria.html
+++ b/galeria.html
@@ -52,17 +52,23 @@
     <p>Clica numa imagem para ver o álbum completo no Google Photos:</p>
 
     <div class="galeria-grid">
-      <a href="https://photos.app.goo.gl/fEXzmdKYdp9gZvLf7" target="_blank">
-        <img src="fotos2022.jpg" alt="Fotos 2022">
+      <a href="https://photos.app.goo.gl/qyertcwkpV1SNkMs8" target="_blank">
+        <img src="fotos2025s.jpg" alt="Fotos 2025 - Sábado">
       </a>
-      <a href="https://photos.app.goo.gl/bPjnK9YMF6nGyUDg6" target="_blank">
-        <img src="fotos2023.jpg" alt="Fotos 2023">
+      <a href="https://photos.app.goo.gl/EibMBwH2B16N9ghH7" target="_blank">
+        <img src="fotos2025d.jpg" alt="Fotos 2025 - Domingo">
       </a>
       <a href="https://photos.app.goo.gl/hp8fLvz1LyTehZ4a7" target="_blank">
         <img src="fotos2024s.jpg" alt="Fotos 2024 - Sábado">
       </a>
       <a href="https://photos.app.goo.gl/NF27oLehUX7MmNJx8" target="_blank">
         <img src="fotos2024d.jpg" alt="Fotos 2024 - Domingo">
+      </a>
+      <a href="https://photos.app.goo.gl/fEXzmdKYdp9gZvLf7" target="_blank">
+        <img src="fotos2022.jpg" alt="Fotos 2022">
+      </a>
+      <a href="https://photos.app.goo.gl/bPjnK9YMF6nGyUDg6" target="_blank">
+        <img src="fotos2023.jpg" alt="Fotos 2023">
       </a>
     </div>
     <section class="patrocinadores-carousel">
