--- a/informacoes.html
+++ b/informacoes.html
@@ -46,17 +46,17 @@
 
       <p>
         <strong>Torneio de Duplas</strong> femininas, masculinas, mistas e sub-16 (feminino e masculino)<br>
-        <small><em>Sub-16: para atletas nascidos em 2010 ou depois</em></small>
+        <small><em>Sub-16: para atletas nascidos em 2011 ou depois</em></small>
       </p>
       <p><strong>📍 Local:</strong> Maribar<br>
-        <strong>📅 Datas:</strong> 2 e 3 de agosto<br>
+        <strong>📅 Datas:</strong> 25 e 26 de julho de 2026<br>
         <strong>🕘 Início:</strong> 8h30
       </p>
 
       <h3>💰 Preço por atleta</h3>
       <ul>
-        <li>13€ por atleta</li>
-        <li>+2€ se participar em dois tipos de torneio</li>
+        <li>15€ por atleta</li>
+        <li>+3€ se participar em dois tipos de torneio</li>
       </ul>
 
       <p><em>Inclui:</em></p>
@@ -81,15 +81,15 @@
 
       <h3>📥 Inscrições</h3>
 
-      <strong>✅ Inscrições Encerradas!</strong><br>
-      Alcançámos o número máximo de duplas:
+      <strong>✅ Inscrições abrem a 15 Junho!</strong><br>
+      O número máximo de duplas:
       <ul style="margin-top: 5px;">
         <li>64 duplas <strong>masculinas</strong></li>
         <li>64 duplas <strong>mistas</strong></li>
         <li>32 duplas <strong>femininas</strong></li>
         <li>8 duplas <strong>sub-16</strong></li>
       </ul>
-      Obrigado a todos pela enorme adesão! Encontramo-nos no <strong>dia 2 de agosto às 8h30</strong> 🌞🏐
+     
 
     </section>
   </main>
