--- a/regulamento.html
+++ b/regulamento.html
@@ -48,15 +48,14 @@
       <li>Enviar a bola em toque de dedos diretamente para o campo adversário é falta.</li>
       <li><strong>Mistos:</strong>
         <ul>
-          <li>É permitido jogar com dois atletas do mesmo género desde que um seja menor de 14 anos (nascidos em 2012 ou
+          <li>É permitido jogar com dois atletas do mesmo género desde que um seja menor de 14 anos (nascidos em 2013 ou
             depois) e parentes.</li>
         </ul>
       </li>
       <li><strong>Sub-16:</strong>
         <ul>
-          <li>Duplas com atletas nascidos em 2010 ou depois.</li>
-          <li>Separação por género se houver pelo menos 6 duplas por género.</li>
-          <li>Atletas sub-16 não podem jogar nos escalões seniores.</li>
+          <li>Duplas com atletas nascidos em 2011 ou depois.</li>
+          <li>Atletas sub-16 não podem jogar nos escalões seniores Masculino e Feminino.</li>
         </ul>
       </li>
       <li><strong>Participação nos Mistos:</strong> é acumulável com outro dos três tipos.</li>
@@ -125,15 +124,18 @@
     </ul>
     <h4>Alterações de Duplas após Inscrição</h4>
     <ul>
-      <li>Se ambos os atletas de uma dupla decidirem separar-se e inscrever-se com parceiros diferentes, a dupla perde o direito à vaga inicialmente conquistada. As novas formações serão tratadas como novas inscrições, sujeitas à disponibilidade de vagas no respetivo escalão.</li>
-      <li>Se apenas um dos atletas não puder participar, por motivo de força maior, o atleta remanescente poderá manter a vaga, desde que:
+      <li>Se ambos os atletas de uma dupla decidirem separar-se e inscrever-se com parceiros diferentes, a dupla perde o
+        direito à vaga inicialmente conquistada. As novas formações serão tratadas como novas inscrições, sujeitas à
+        disponibilidade de vagas no respetivo escalão.</li>
+      <li>Se apenas um dos atletas não puder participar, por motivo de força maior, o atleta remanescente poderá manter
+        a vaga, desde que:
         <ul>
           <li>A substituição seja comunicada previamente à organização;</li>
           <li>O novo parceiro não esteja já inscrito no torneio;</li>
           <li>A nova dupla respeite os critérios do escalão (idade, género, etc.).</li>
         </ul>
       </li>
-     
+
     </ul>
 
   </main>
