--- a/edicoes-passadas.html
+++ b/edicoes-passadas.html
@@ -32,7 +32,14 @@
   <main>
     <section class="conteudo">
       <h2>Edições Passadas</h2>
-
+      <!-- 2025 -->
+      <h3>🏆 Torneio 2025</h3>
+      <p>Vídeo oficial da edição de 2025:</p>
+      <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;margin-bottom:2rem;">
+        <iframe src="https://www.youtube.com/embed/7s0wM0hdBe0?si=XVKGgpeNKciBXcOk" frameborder="0" allowfullscreen
+          style="position:absolute;top:0;left:0;width:100%;height:100%;">
+        </iframe>
+      </div>
       <!-- 2024 -->
       <h3>🏆 Torneio 2024</h3>
       <p>Vídeo oficial da edição de 2024:</p>
